<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#182050"
    android:orientation="vertical"
    tools:context=".your_info">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/signUpTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/sign_up"
            android:textColor="#FFFFFF"
            android:textSize="35sp"
            android:textStyle="bold"
            android:fontFamily="casual"/>

    </LinearLayout>




    <LinearLayout
        android:id="@+id/textRow"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:layout_marginTop="20dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintHeight_percent=".14"
        app:layout_constraintTop_toBottomOf="@id/signUpTxt">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:fontFamily="casual"/>

            <EditText
                android:id="@+id/FN"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:autofillHints=""
                android:background="#FFFFFF"
                android:hint="@string/jhon"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingStart="15dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/greyDate"
                tools:ignore="RtlSymmetry,TextFields" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textColor="#FFFFFF"
                android:fontFamily="casual"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/LN"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:autofillHints=""
                android:background="#FFFFFF"
                android:hint="@string/wick"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingStart="15dp"
                android:textColor="@android:color/black"
                android:textColorHint="@color/greyDate"
                tools:ignore="RtlSymmetry,TextFields" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:fontFamily="casual"/>

        <EditText
            android:id="@+id/PHONE"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:autofillHints=""
            android:background="#FFFFFF"
            android:hint="@string/_91_7896578987"
            android:inputType="phone"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/greyDate"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:fontFamily="casual"/>


        <EditText
            android:id="@+id/EMAIL"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:autofillHints=""
            android:background="#FFFFFF"
            android:hint="@string/jhonwick_gmail_com"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/greyDate"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:fontFamily="casual"/>


        <EditText
            android:id="@+id/PASS"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:autofillHints=""
            android:background="#FFFFFF"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/greyDate"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <Button
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/register"
        android:id="@+id/registerBtn"
        android:fontFamily="casual"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/registerBtn">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@android:color/darker_gray"
            android:fontFamily="casual"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/sign_in"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:fontFamily="casual"
            android:onClick="sign_in"/>
    </LinearLayout>


</LinearLayout>

