<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#182050"
    android:orientation="vertical"
    tools:ignore="HardcodedText">


    <LinearLayout
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="186dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="147dp"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:padding="35dp"
            android:text="Parking APP"
            android:fontFamily="casual"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="50sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_in"
            android:textColor="#FFFFFF"
            android:textSize="40sp"
            android:textStyle="bold"
            android:fontFamily="casual"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/email"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:autofillHints=""
            android:background="#FFFFFF"
            android:hint="@string/jhonwick_gmail_com"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/greyDate"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/password"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:autofillHints=""
            android:background="#FFFFFF"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:textColor="@android:color/black"
            android:textColorHint="@color/greyDate"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="casual"
        android:text="@string/register" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="don't have an account ?"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:onClick="sign_up"
            android:text="Sign Up"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"/>


</LinearLayout>